# dwarf-fortress

./: CLAUDE.md  README.md  pyproject.toml
backend/: config.py  main.py
backend/ai/: decision.py  pathfinding.py
backend/api/: routes.py  serialization.py  websocket.py
backend/entities/: creature.py
backend/simulation/: creature_system.py  game_loop.py  game_state.py
backend/world/: grid.py  tile.py  worldgen.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: input.js  main.js  renderer.js  state.js  ui.js
tests/: conftest.py  test_creatures.py  test_pathfinding.py  test_world.py
